--- a/tareas/nbproject/project.properties
+++ b/tareas/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/unidad07.jar
+dist.jar=${dist.dir}/tareas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/unidad07
+dist.jlink.output=${dist.jlink.dir}/tareas
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=unidad07
+jlink.launcher.name=tareas
 main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
